<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".detail.DetailActivity">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shimmer_auto_start="true"
        tools:visibility="gone">

        <include layout="@layout/shimmer_detail_anime" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/img_poster_container"
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:cardMaxElevation="4dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/img_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@color/placeholder"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toEndOf="@id/img_poster_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/tv_genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="@id/tv_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    tools:text="@string/genres" />

                <TextView
                    android:id="@+id/tv_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="@id/tv_genres"
                    app:layout_constraintTop_toBottomOf="@id/tv_genres"
                    tools:text="@string/release_time" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="@id/tv_release"
                    app:layout_constraintTop_toBottomOf="@id/tv_release"
                    tools:text="@string/status" />

                <TextView
                    android:id="@+id/tv_other_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:textSize="14sp"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="@id/tv_status"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_status"
                    tools:text="@string/other_name" />

                <TextView
                    android:id="@+id/tv_scores"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/tv_other_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_other_name"
                    tools:text="@string/scores" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/plot_summary" />

            <TextView
                android:id="@+id/tv_plot_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                tools:text="@string/example_of_plot_summary" />

            <Button
                android:id="@+id/btn_watch_movie"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_button_episode"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/watch_the_movie" />

            <TextView
                android:id="@+id/tv_episodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/tv_show_episode" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_episodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:layout_marginTop="8dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/items_episodes" />
        </LinearLayout>
    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/error_animation"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_fileName="error.json"
        app:lottie_loop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>